// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MemberQuestionCard > snapshots the English copy 1`] = `
<div>
  <div
    class="frame"
    data-question-key="s1:question-1"
  >
    <section
      aria-label="Remote · 王小明"
      class="card"
    >
      <header
        class="banner"
      >
        <div
          class="originRow"
        >
          <span
            class="remoteTag"
          >
            Remote
          </span>
          <span
            class="asker"
          >
            <span
              aria-hidden="true"
              class="avatarFallback"
            >
              王
            </span>
            <span
              class="askerName"
            >
              王小明
            </span>
            <span
              class="roleBadge"
            >
              Admin
            </span>
          </span>
          <span
            class="countdown"
          >
            ⏳ 00:02:05
          </span>
        </div>
        <div
          class="contextRow"
        >
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              Project
            </span>
            千帆平台
          </span>
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              From session
            </span>
            整理迭代计划
          </span>
        </div>
        <div
          class="background"
        >
          <span
            class="contextLabel"
          >
            Background
          </span>
          <p
            class="backgroundText"
          >
            该成员近 30 天无提交记录。
          </p>
        </div>
        <div
          class="references"
        >
          <span
            class="contextLabel"
          >
            Materials
          </span>
          <div
            class="chips"
          >
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                roster.md
              </span>
              <span
                class="chipReason"
              >
                当前成员名单与角色
              </span>
            </button>
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                activity.csv
              </span>
              <span
                class="chipReason"
              >
                近 30 天活跃度
              </span>
            </button>
          </div>
        </div>
      </header>
      <div
        class="body"
        data-member-presentation="true"
      >
        <div
          data-question-presentation=""
          data-request-key="s1:question-1:1"
        >
          <button
            aria-expanded="true"
            aria-label="Collapse the question card"
            type="button"
          />
          <div>
            将王小明移出项目吗？
          </div>
          <button
            aria-checked="true"
            aria-label="移出"
            role="radio"
            type="button"
          >
            移出
          </button>
          <span>
            1 / 1
          </span>
          <span>
            推荐
          </span>
          <textarea
            placeholder="Type your answer"
          />
          <button
            type="button"
          >
            Submit
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`MemberQuestionCard > snapshots the full banner and the shared presentation (light) 1`] = `
<div>
  <div
    class="frame"
    data-question-key="s1:question-1"
  >
    <section
      aria-label="远端 · 王小明"
      class="card"
    >
      <header
        class="banner"
      >
        <div
          class="originRow"
        >
          <span
            class="remoteTag"
          >
            远端
          </span>
          <span
            class="asker"
          >
            <span
              aria-hidden="true"
              class="avatarFallback"
            >
              王
            </span>
            <span
              class="askerName"
            >
              王小明
            </span>
            <span
              class="roleBadge"
            >
              管理员
            </span>
          </span>
          <span
            class="countdown"
          >
            ⏳ 00:02:05
          </span>
        </div>
        <div
          class="contextRow"
        >
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              项目
            </span>
            千帆平台
          </span>
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              来源会话
            </span>
            整理迭代计划
          </span>
        </div>
        <div
          class="background"
        >
          <span
            class="contextLabel"
          >
            背景
          </span>
          <p
            class="backgroundText"
          >
            该成员近 30 天无提交记录。
          </p>
        </div>
        <div
          class="references"
        >
          <span
            class="contextLabel"
          >
            材料
          </span>
          <div
            class="chips"
          >
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                roster.md
              </span>
              <span
                class="chipReason"
              >
                当前成员名单与角色
              </span>
            </button>
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                activity.csv
              </span>
              <span
                class="chipReason"
              >
                近 30 天活跃度
              </span>
            </button>
          </div>
        </div>
      </header>
      <div
        class="body"
        data-member-presentation="true"
      >
        <div
          data-question-presentation=""
          data-request-key="s1:question-1:1"
        >
          <button
            aria-expanded="true"
            aria-label="收起问题卡片"
            type="button"
          />
          <div>
            将王小明移出项目吗？
          </div>
          <button
            aria-checked="true"
            aria-label="移出"
            role="radio"
            type="button"
          >
            移出
          </button>
          <span>
            1 / 1
          </span>
          <span>
            推荐
          </span>
          <textarea
            placeholder="输入你的答案"
          />
          <button
            type="button"
          >
            提交
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`MemberQuestionCard > snapshots the full banner under the dark theme attribute 1`] = `
<div>
  <div
    class="frame"
    data-question-key="s1:question-1"
  >
    <section
      aria-label="远端 · 王小明"
      class="card"
    >
      <header
        class="banner"
      >
        <div
          class="originRow"
        >
          <span
            class="remoteTag"
          >
            远端
          </span>
          <span
            class="asker"
          >
            <span
              aria-hidden="true"
              class="avatarFallback"
            >
              王
            </span>
            <span
              class="askerName"
            >
              王小明
            </span>
            <span
              class="roleBadge"
            >
              管理员
            </span>
          </span>
          <span
            class="countdown"
          >
            ⏳ 00:02:05
          </span>
        </div>
        <div
          class="contextRow"
        >
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              项目
            </span>
            千帆平台
          </span>
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              来源会话
            </span>
            整理迭代计划
          </span>
        </div>
        <div
          class="background"
        >
          <span
            class="contextLabel"
          >
            背景
          </span>
          <p
            class="backgroundText"
          >
            该成员近 30 天无提交记录。
          </p>
        </div>
        <div
          class="references"
        >
          <span
            class="contextLabel"
          >
            材料
          </span>
          <div
            class="chips"
          >
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                roster.md
              </span>
              <span
                class="chipReason"
              >
                当前成员名单与角色
              </span>
            </button>
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                activity.csv
              </span>
              <span
                class="chipReason"
              >
                近 30 天活跃度
              </span>
            </button>
          </div>
        </div>
      </header>
      <div
        class="body"
        data-member-presentation="true"
      >
        <div
          data-question-presentation=""
          data-request-key="s1:question-1:1"
        >
          <button
            aria-expanded="true"
            aria-label="收起问题卡片"
            type="button"
          />
          <div>
            将王小明移出项目吗？
          </div>
          <button
            aria-checked="true"
            aria-label="移出"
            role="radio"
            type="button"
          >
            移出
          </button>
          <span>
            1 / 1
          </span>
          <span>
            推荐
          </span>
          <textarea
            placeholder="输入你的答案"
          />
          <button
            type="button"
          >
            提交
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`MemberQuestionCard > snapshots the identity-lite banner and the folded strip 1`] = `
<div>
  <div
    class="frame"
    data-question-key="s1:question-1"
  >
    <section
      aria-label="远端 · 成员"
      class="card"
    >
      <header
        class="banner"
      >
        <div
          class="originRow"
        >
          <span
            class="remoteTag"
          >
            远端
          </span>
        </div>
        <div
          class="background"
        >
          <span
            class="contextLabel"
          >
            背景
          </span>
          <p
            class="backgroundText"
          >
            该成员近 30 天无提交记录。
          </p>
        </div>
      </header>
      <div
        class="body"
        data-member-presentation="true"
      >
        <div
          data-question-presentation=""
          data-request-key="s1:question-1:1"
        >
          <button
            aria-expanded="true"
            aria-label="收起问题卡片"
            type="button"
          />
          <div>
            将王小明移出项目吗？
          </div>
          <button
            aria-checked="true"
            aria-label="移出"
            role="radio"
            type="button"
          >
            移出
          </button>
          <span>
            1 / 1
          </span>
          <span>
            推荐
          </span>
          <textarea
            placeholder="输入你的答案"
          />
          <button
            type="button"
          >
            提交
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`MemberQuestionCard > snapshots the identity-lite banner and the folded strip 2`] = `
<div>
  <div
    class="frame"
    data-folded="true"
    data-question-key="s1:question-1"
  >
    <section
      aria-label="远端 · 成员"
      class="card cardFolded"
    >
      <button
        aria-label="远端 · 成员"
        class="foldedBar"
        type="button"
      >
        <span
          class="remoteTag"
        >
          远端
        </span>
        <span
          class="foldedSummary"
        >
          远端 · 成员
        </span>
        <span
          class="foldedMark"
        >
          已收起
        </span>
      </button>
      <div
        class="body bodyHidden"
        data-member-presentation="true"
      >
        <div
          data-question-presentation=""
          data-request-key="s1:question-1:1"
        >
          <button
            aria-expanded="false"
            aria-label="展开问题卡片"
            type="button"
          />
          <div>
            将王小明移出项目吗？
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
